@@ -8,153 +8,26 @@ import net.blay09.mods.waystones.Waystones;
 import net.blay09.mods.waystones.api.TeleportFlags;
 import net.blay09.mods.waystones.core.UserDecoratedWaystone;
 import net.minecraft.network.RegistryFriendlyByteBuf;
-import net.minecraft.network.codec.ByteBufCodecs;
 import net.minecraft.network.codec.StreamCodec;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.entity.player.Inventory;
 import net.minecraft.world.inventory.MenuType;
-import net.minecraft.world.item.ItemStack;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
 import java.util.Set;
+import java.util.function.Supplier;
 
 public class ModMenus {
 
-    public record ItemInitiatedWaystoneMenuData(List<UserDecoratedWaystone> waystones, ItemStack itemStack) {
-        public static final StreamCodec<RegistryFriendlyByteBuf, ItemInitiatedWaystoneMenuData> STREAM_CODEC = StreamCodec.composite(
-                UserDecoratedWaystone.LIST_STREAM_CODEC,
-                ItemInitiatedWaystoneMenuData::waystones,
-                ItemStack.STREAM_CODEC,
-                ItemInitiatedWaystoneMenuData::itemStack,
-                ItemInitiatedWaystoneMenuData::new
-        );
-    }
-
-    public record WaystoneListMenuData(List<UserDecoratedWaystone> waystones, Optional<ResourceLocation> waystoneKind) {
-        public static final StreamCodec<RegistryFriendlyByteBuf, WaystoneListMenuData> STREAM_CODEC = StreamCodec.composite(
-                UserDecoratedWaystone.LIST_STREAM_CODEC,
-                WaystoneListMenuData::waystones,
-                ByteBufCodecs.optional(ResourceLocation.STREAM_CODEC),
-                WaystoneListMenuData::waystoneKind,
-                WaystoneListMenuData::new
-        );
-
-        public WaystoneListMenuData(List<UserDecoratedWaystone> waystones) {
-            this(waystones, Optional.empty());
-        }
-    }
-
     private static final BalmMenus menus = Balm.getMenus();
-    public static DeferredObject<MenuType<WaystoneSelectionMenu>> waystoneSelection = menus.registerMenu(id("waystone_selection"),
-            new BalmMenuFactory<WaystoneSelectionMenu, WaystoneSelectionMenu.Data>() {
-                @Override
-                public WaystoneSelectionMenu create(int windowId, Inventory inventory, WaystoneSelectionMenu.Data data) {
-                    return new WaystoneSelectionMenu(ModMenus.waystoneSelection.get(),
-                            data.fromWaystone(),
-                            windowId,
-                            data.waystones(),
-                            Collections.emptySet());
-                }
-
-                @Override
-                public StreamCodec<RegistryFriendlyByteBuf, WaystoneSelectionMenu.Data> getStreamCodec() {
-                    return WaystoneSelectionMenu.STREAM_CODEC;
-                }
-            });
-    public static DeferredObject<MenuType<WaystoneSelectionMenu>> warpScrollSelection = menus.registerMenu(id("warp_scroll_selection"),
-            new BalmMenuFactory<WaystoneSelectionMenu, ItemInitiatedWaystoneMenuData>() {
-                @Override
-                public WaystoneSelectionMenu create(int windowId, Inventory inventory, ItemInitiatedWaystoneMenuData data) {
-                    return new WaystoneSelectionMenu(ModMenus.warpScrollSelection.get(), null, windowId, data.waystones(), Collections.emptySet())
-                            .withWarpItem(data.itemStack());
-                }
-
-                @Override
-                public StreamCodec<RegistryFriendlyByteBuf, ItemInitiatedWaystoneMenuData> getStreamCodec() {
-                    return ItemInitiatedWaystoneMenuData.STREAM_CODEC;
-                }
-            });
-    public static DeferredObject<MenuType<WaystoneSelectionMenu>> portalScrollSelection = menus.registerMenu(id("portal_scroll_selection"),
-            new BalmMenuFactory<WaystoneSelectionMenu, ItemInitiatedWaystoneMenuData>() {
-                @Override
-                public WaystoneSelectionMenu create(int windowId, Inventory inventory, ItemInitiatedWaystoneMenuData data) {
-                    return new WaystoneSelectionMenu(ModMenus.portalScrollSelection.get(), null, windowId, data.waystones(), Collections.emptySet())
-                            .withWarpItem(data.itemStack());
-                }
-
-                @Override
-                public StreamCodec<RegistryFriendlyByteBuf, ItemInitiatedWaystoneMenuData> getStreamCodec() {
-                    return ItemInitiatedWaystoneMenuData.STREAM_CODEC;
-                }
-            });
-    public static DeferredObject<MenuType<WaystoneSelectionMenu>> warpStoneSelection = menus.registerMenu(id("warp_stone_selection"),
-            new BalmMenuFactory<WaystoneSelectionMenu, ItemInitiatedWaystoneMenuData>() {
-                @Override
-                public WaystoneSelectionMenu create(int windowId, Inventory inventory, ItemInitiatedWaystoneMenuData data) {
-                    return new WaystoneSelectionMenu(ModMenus.warpStoneSelection.get(), null, windowId, data.waystones(), Collections.emptySet())
-                            .withWarpItem(data.itemStack());
-                }
-
-                @Override
-                public StreamCodec<RegistryFriendlyByteBuf, ItemInitiatedWaystoneMenuData> getStreamCodec() {
-                    return ItemInitiatedWaystoneMenuData.STREAM_CODEC;
-                }
-            });
-    public static DeferredObject<MenuType<WaystoneSelectionMenu>> portstoneSelection = menus.registerMenu(id("portstone_selection"),
-            new BalmMenuFactory<WaystoneSelectionMenu, WaystoneListMenuData>() {
-                @Override
-                public WaystoneSelectionMenu create(int windowId, Inventory inventory, WaystoneListMenuData data) {
-                    return new WaystoneSelectionMenu(ModMenus.portstoneSelection.get(), null, windowId, data.waystones(), Set.of(TeleportFlags.PORTSTONE), data.waystoneKind().orElse(null));
-                }
-
-                @Override
-                public StreamCodec<RegistryFriendlyByteBuf, WaystoneListMenuData> getStreamCodec() {
-                    return WaystoneListMenuData.STREAM_CODEC;
-                }
-            });
-    public static DeferredObject<MenuType<WaystoneSelectionMenu>> inventorySelection = menus.registerMenu(id("inventory_selection"),
-            new BalmMenuFactory<WaystoneSelectionMenu, List<UserDecoratedWaystone>>() {
-                @Override
-                public WaystoneSelectionMenu create(int windowId, Inventory inventory, List<UserDecoratedWaystone> waystones) {
-                    return new WaystoneSelectionMenu(ModMenus.inventorySelection.get(), null, windowId, waystones, Set.of(TeleportFlags.INVENTORY_BUTTON));
-                }
-
-                @Override
-                public StreamCodec<RegistryFriendlyByteBuf, List<UserDecoratedWaystone>> getStreamCodec() {
-                    return UserDecoratedWaystone.LIST_STREAM_CODEC;
-                }
-            });
-    public static DeferredObject<MenuType<WaystoneSelectionMenu>> adminSelection = menus.registerMenu(id("admin_selection"),
-            new BalmMenuFactory<WaystoneSelectionMenu, List<UserDecoratedWaystone>>() {
-                @Override
-                public WaystoneSelectionMenu create(int windowId, Inventory inventory, List<UserDecoratedWaystone> waystones) {
-                    return new WaystoneSelectionMenu(ModMenus.adminSelection.get(), null, windowId, waystones, Set.of(TeleportFlags.ADMIN));
-                }
-
-                @Override
-                public StreamCodec<RegistryFriendlyByteBuf, List<UserDecoratedWaystone>> getStreamCodec() {
-                    return UserDecoratedWaystone.LIST_STREAM_CODEC;
-                }
-            });
-    public static DeferredObject<MenuType<WaystoneSelectionMenu>> sharestoneSelection = menus.registerMenu(id("sharestone_selection"),
-            new BalmMenuFactory<WaystoneSelectionMenu, WaystoneSelectionMenu.Data>() {
-                @Override
-                public WaystoneSelectionMenu create(int windowId, Inventory inventory, WaystoneSelectionMenu.Data data) {
-                    return new WaystoneSelectionMenu(ModMenus.sharestoneSelection.get(),
-                            data.fromWaystone(),
-                            windowId,
-                            data.waystones(),
-                            Collections.emptySet());
-                }
-
-                @Override
-                public StreamCodec<RegistryFriendlyByteBuf, WaystoneSelectionMenu.Data> getStreamCodec() {
-                    return WaystoneSelectionMenu.STREAM_CODEC;
-                }
-            });
+    public static DeferredObject<MenuType<WaystoneSelectionMenu>> waystoneSelection = registerWaystoneSelectionMenu("waystone_selection", () -> ModMenus.waystoneSelection.get(), Set.of());
+    public static DeferredObject<MenuType<WaystoneSelectionMenu>> warpScrollSelection = registerWaystoneSelectionMenu("warp_scroll_selection", () -> ModMenus.warpScrollSelection.get(), Set.of());
+    public static DeferredObject<MenuType<WaystoneSelectionMenu>> portalScrollSelection = registerWaystoneSelectionMenu("portal_scroll_selection", () -> ModMenus.portalScrollSelection.get(), Set.of());
+    public static DeferredObject<MenuType<WaystoneSelectionMenu>> warpStoneSelection = registerWaystoneSelectionMenu("warp_stone_selection", () -> ModMenus.warpStoneSelection.get(), Set.of());
+    public static DeferredObject<MenuType<WaystoneSelectionMenu>> portstoneSelection = registerWaystoneSelectionMenu("portstone_selection", () -> ModMenus.portstoneSelection.get(), Set.of(TeleportFlags.PORTSTONE));
+    public static DeferredObject<MenuType<WaystoneSelectionMenu>> inventorySelection = registerWaystoneSelectionMenu("inventory_selection", () -> ModMenus.inventorySelection.get(), Set.of(TeleportFlags.INVENTORY_BUTTON));
+    public static DeferredObject<MenuType<WaystoneSelectionMenu>> adminSelection = registerWaystoneSelectionMenu("admin_selection", () -> ModMenus.adminSelection.get(), Set.of(TeleportFlags.ADMIN));
+    public static DeferredObject<MenuType<WaystoneSelectionMenu>> sharestoneSelection = registerWaystoneSelectionMenu("sharestone_selection", () -> ModMenus.sharestoneSelection.get(), Set.of());
     public static DeferredObject<MenuType<WaystoneModifierMenu>> waystoneModifiers = menus.registerMenu(id("waystone_modifiers"),
             new BalmMenuFactory<WaystoneModifierMenu, UserDecoratedWaystone>() {
                 @Override
@@ -167,6 +40,28 @@ public class ModMenus {
                     return UserDecoratedWaystone.STREAM_CODEC;
                 }
             });
+
+    private static DeferredObject<MenuType<WaystoneSelectionMenu>> registerWaystoneSelectionMenu(String name, Supplier<MenuType<WaystoneSelectionMenu>> menuType, Set<ResourceLocation> flags) {
+        return menus.registerMenu(id(name),
+            new BalmMenuFactory<WaystoneSelectionMenu, WaystoneSelectionMenu.Data>() {
+                @Override
+                public WaystoneSelectionMenu create(int windowId, Inventory inventory, WaystoneSelectionMenu.Data data) {
+                    return new WaystoneSelectionMenu(menuType.get(),
+                            data.fromWaystone().orElse(null),
+                            windowId,
+                            data.waystones(),
+                            flags,
+                            data.targetKind().orElse(null))
+                            .withWarpItem(data.warpItem());
+                }
+
+                @Override
+                public StreamCodec<RegistryFriendlyByteBuf, WaystoneSelectionMenu.Data> getStreamCodec() {
+                    return WaystoneSelectionMenu.STREAM_CODEC;
+                }
+            });
+    }
+
     public static DeferredObject<MenuType<WaystoneEditMenu>> waystoneSettings = menus.registerMenu(id("waystone"),
             new BalmMenuFactory<WaystoneEditMenu, WaystoneEditMenu.Data>() {
                 @Override
